[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blogpack"
version = "0.1.0"
description = "Download entire blogs for offline reading with working internal links"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Tim Fernando" }
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "ebooklib>=0.18",
    "weasyprint>=60.0",
    "rich>=13.0.0",
]

[project.scripts]
blogpack = "blogpack.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["blogpack"]
