[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blogpack"
version = "0.1.1"
description = "Download entire blogs for offline reading with working internal links"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
authors = [
    { name = "Tim Farrelly" }
]
keywords = ["blog", "archive", "epub", "pdf", "offline", "substack", "ghost", "wordpress"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "ebooklib>=0.18",
    "weasyprint>=60.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/timf34/blogpack"
Repository = "https://github.com/timf34/blogpack"

[project.scripts]
blogpack = "blogpack.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["blogpack"]
